--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             <nav>
                 <ul>
                     <li><a href="#">home</a></li>
-                    <li><a href="#">grand Marshal</a></li>
+                    <li><a href="http://fresnovdp.org/grandmarshal.php">grand Marshal</a></li>
                     <li><a href="#">press release</a></li>
-                    <li><a href="https://goo.gl/maps/xmxnpDAqRgS2">parade route</a></li>
+                    <li><a href="index2.html">parade route</a></li>
                     <li><a href="#">sponsors</a></li>
                     <li><a href="#">about us</a></li>
                 </ul>
