--- a/index2.html
+++ b/index2.html
@@ -25,6 +25,9 @@
                 <div id="fame">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d6394.974587253484!2d-119.79247242373519!3d36.73487291984818!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e2!4m5!1s0x80945e1f4525c49d%3A0xc6e873ebca96bdc3!2sTulare+St+%26+P+St%2C+Fresno%2C+CA+93721!3m2!1d36.7382973!2d-119.7840487!4m5!1s0x8094609e6ff5a7ff%3A0x7693daafbae1eac8!2sH+St+%26+Kern+St%2C+Fresno%2C+CA+93721!3m2!1d36.7314487!2d-119.79109709999999!5e0!3m2!1sen!2sus!4v1455834511367" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
+                </section>
+                <section>
+                <p>Begins at Tulare and P Street.1. Start out going northwest on P St toward Mariposa Mall. (go 0.18 miles) 2. Turn left onto Fresno St. (go 0.38 miles) 3. Turn left onto M St. (go 0.18 miles) 4. Turn right onto Tulare St. (go 0.19 miles) 5. 1800 TULARE ST is on the left. (go 0 miles)Ends Chukchansi Park, 1800 Tulare St, Fresno, CA 93721 US Announcers and Grandstand locations: Television and Main Grandstand – In front of Fresno City Hall on P St. 2600 Fresno St. Second Announcing Stand – In front of the Veterans Memorial Museum 2425 Fresno St.</p>
             </section>
         </main>
     </body>
