--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <li><a href="#">press release</a></li>
                     <li><a href="index2.html">parade route</a></li>
                     <li><a href="#">sponsors</a></li>
-                    <li><a href="#">about us</a></li>
+                    <li><a href="index3.html">about us</a></li>
                 </ul>
             </nav>
             <img src="http://i.imgur.com/gyYmV8d.png" alt="sponsor" id="sponsor">
@@ -42,17 +42,9 @@
                 </p>
             </div> 
 
-<!--
-           <section id=sec2>
-            <div id="donate">
-               <button>Donate</button>
-                <a href="#"></a>
-            </div>
-            
--->
             </section>     
         </main>
-
+   <a href="https://www.paypal.com/us/cgi-bin/webscr?cmd=_flow&SESSION=3O0uQfbRUxHAi_YDlHZKMwYE6KZ-SWaQv9DUPehuqXtt8F_rgV6j3iW1_Ba&dispatch=5885d80a13c0db1f8e263663d3faee8d64ad11bbf4d2a5a1a0d303a50933f9b2"><img src="http://i.imgur.com/p3CpaMM.gif"width="150px" height="50px" alt="donate" id="donate"></a>
 
         <footer>
             <img src="http://i.imgur.com/vRcPIXv.png"/ alt="army">
@@ -61,7 +53,8 @@
             <img src="http://i.imgur.com/s71wcsW.jpg" alt="coast">
             <img src="http://i.imgur.com/P72pprw.jpg"alt="national">
             <img src="http://i.imgur.com/QXcZP2h.gif" alt="airforce">
-            <div id="copy">Copyright ©2016 Fresno Veterans Day Parade  <img src="http://i.imgur.com/k1mPN5e.gif" width="25px" height="25px" alt="face" id="face"></div>
+            <div id="copy">Copyright ©2016 Fresno Veterans Day Parade </div>
+          <img src="http://i.imgur.com/k1mPN5e.gif" width="25px" height="25px" alt="face" id="face">
            
         </footer>
     </body>
