--- a/index2.html
+++ b/index2.html
@@ -10,12 +10,12 @@
              <img src="http://i.imgur.com/eoK3p48.png" alt="logo">
             <nav>
                 <ul>
-                    <li><a href="#">home</a></li>
+                    <li><a href="index.html">home</a></li>
                     <li><a href="http://fresnovdp.org/grandmarshal.php">grand Marshal</a></li>
                     <li><a href="#">press release</a></li>
                     <li><a href="index2.html">parade route</a></li>
                     <li><a href="#">sponsors</a></li>
-                    <li><a href="#">about us</a></li>
+                    <li><a href="index3.html">about us</a></li>
                 </ul>
             </nav>
             <img src="http://i.imgur.com/gyYmV8d.png" alt="sponsor" id="sponsor">
