--- a/index3.html
+++ b/index3.html
@@ -22,10 +22,10 @@
             <img src="http://i.imgur.com/gyYmV8d.png" alt="sponsor" id="sponsor">
         </header>
         <main>
-           <article>
-               <p><b>About Us
+           <section>
+               <p id="about"><b>About Us
                     The Fresno Veterans Day Parade honors our veterans from all branches. The parade is held in downtown Fresno. It has grown by leaps and bounds over its nine decades of existence, so much so in fact, that in 2007, the Executive Board of the Parade presented the idea of becoming incorporated and applying for 501(c)3 status. The response was unanimous and the parade became a not-for-profit corporation in California.</b></p>
-          <p><b>HistoryVeterans Day</b>
+          <p id="history"><b>HistoryVeterans Day</b>
                 Wikipedia – U.S. President Woodrow Wilson first proclaimed Armistice Day for November 11, 1919. In proclaiming the holiday, he said "To us in America, the reflections of Armistice Day will be filled with solemn pride in the heroism of those who died in the country's service and with gratitude for the victory, both because of the thing from which it has freed us and because of the opportunity it has given America to show her sympathy with peace and justice in the councils of the nations."[2]
                 The United States Congress passed a concurrent resolution seven years later on June 4, 1926, requesting that President Calvin Coolidge issue another proclamation to observe November 11 with appropriate ceremonies.[2] A Congressional Act (52 Stat. 351; 5 U.S. Code, Sec. 87a) approved May 13, 1938, made the 11th of November in each year a legal holiday: "a day to be dedicated to the cause of world peace and to be thereafter celebrated and known as 'Armistice Day'."
                 In 1945, WWII veteran Raymond Weeks from Birmingham, Alabama had the idea to expand Armistice Day to celebrate all veterans, not just those who died in World War I. Weeks led a delegation to Gen. Dwight Eisenhower, who supported the idea of National Veterans Day. Weeks led the first national celebration in 1947 in Alabama and annually until his death in 1985. President Reagan honored Weeks at The White House with the Presidential Citizenship Medal in 1982 as the driving force for the national holiday. Elizabeth Dole, who prepared the briefing for President Reagan, determined Weeks as the "Father of Veterans Day."
@@ -34,7 +34,7 @@
                 The National Veterans Award, created in 1954, also started in Birmingham, Alabama. Congressman Rees of Kansas was honored in Alabama as the first recipient of the award for his support offering legislation to make Veterans Day a federal holiday, which marked nine years of effort by Raymond Weeks. Weeks conceived the idea in 1945, petitioned Gen. Eisenhower in 1946, led the first Veterans Day celebration in 1947 (keeping the official name Armistice Day until Veterans Day was legal in 1954).
                 Although originally scheduled for celebration on November 11 of every year, starting in 1971 in accordance with the Uniform Monday Holiday Act, Veterans Day was moved to the fourth Monday of October. In 1978, it was moved back to its original celebration on <u>November 11.</u>
                 Fresno Veterans Day Parade</p>
-           </article>
+          </section>
                <a href="https://www.paypal.com/us/cgi-bin/webscr?cmd=_flow&SESSION=3O0uQfbRUxHAi_YDlHZKMwYE6KZ-SWaQv9DUPehuqXtt8F_rgV6j3iW1_Ba&dispatch=5885d80a13c0db1f8e263663d3faee8d64ad11bbf4d2a5a1a0d303a50933f9b2"><img src="http://i.imgur.com/p3CpaMM.gif"width="150px" height="50px" alt="donate" id="donate"></a>
 
         <footer>
