--- a/index.html
+++ b/index.html
@@ -38,23 +38,23 @@
             <div id="info">
                 <img src="http://i.imgur.com/xCAwR1y.jpg" width="300px" height="300px"/> 
                 <p>Grand Marshal: <a href="http://fresnovdp.org/grandmarshal.php" id="gm"/>CAPT Monty "Ash" Ashliman</a>
-                <b>Information</b> Live on KSEE 24 and Pentagon Channel <br /> Contact: 5940 E. Shoelds Ave #101 Fresno Ca, 93727.
+                <b>Information</b> Live on KSEE 24 and Pentagon Channel <br /> <b>Contact:</b> 5940 E. Shields Ave #101 Fresno Ca, 93727.
                 </p>
             </div> 
 
             </section>     
         </main>
-   <a href="https://www.paypal.com/us/cgi-bin/webscr?cmd=_flow&SESSION=3O0uQfbRUxHAi_YDlHZKMwYE6KZ-SWaQv9DUPehuqXtt8F_rgV6j3iW1_Ba&dispatch=5885d80a13c0db1f8e263663d3faee8d64ad11bbf4d2a5a1a0d303a50933f9b2"><img src="http://i.imgur.com/p3CpaMM.gif"width="150px" height="50px" alt="donate" id="donate"></a>
+           <a href="https://www.paypal.com/us/cgi-bin/webscr?cmd=_flow&SESSION=3O0uQfbRUxHAi_YDlHZKMwYE6KZ-SWaQv9DUPehuqXtt8F_rgV6j3iW1_Ba&dispatch=5885d80a13c0db1f8e263663d3faee8d64ad11bbf4d2a5a1a0d303a50933f9b2"><img src="http://i.imgur.com/p3CpaMM.gif"width="150px" height="50px" alt="donate" id="donate"></a>
 
         <footer>
-            <img src="http://i.imgur.com/vRcPIXv.png"/ alt="army">
-            <img src="http://i.imgur.com/pK0RFs4.png"/ alt="navy">
-            <img src="http://i.imgur.com/pyj0DNA.jpg" width="100px" height="100px" alt="marine">
-            <img src="http://i.imgur.com/s71wcsW.jpg" alt="coast">
-            <img src="http://i.imgur.com/P72pprw.jpg"alt="national">
-            <img src="http://i.imgur.com/QXcZP2h.gif" alt="airforce">
+            <a href="#"><img src="http://i.imgur.com/vRcPIXv.png"/ alt="army"></a>
+            <a href="#"><img src="http://i.imgur.com/pK0RFs4.png"/ alt="navy"></a>
+            <a href="#"><img src="http://i.imgur.com/pyj0DNA.jpg" width="100px" height="100px" alt="marine"></a>
+            <a href="#"><img src="http://i.imgur.com/s71wcsW.jpg" alt="coast"></a>
+            <a href="#"><img src="http://i.imgur.com/Xl9Bipl.png" alt="national"></a>
+            <a href="#"><img src="http://i.imgur.com/QXcZP2h.gif" alt="airforce"></a>
             <div id="copy">Copyright ©2016 Fresno Veterans Day Parade </div>
-          <img src="http://i.imgur.com/k1mPN5e.gif" width="25px" height="25px" alt="face" id="face">
+            <a href="#"><img src="http://i.imgur.com/k1mPN5e.gif" width="25px" height="25px" alt="face" id="face"></a>
            
         </footer>
     </body>
