--- a/index2.html
+++ b/index2.html
@@ -36,7 +36,7 @@
             <img src="http://i.imgur.com/pK0RFs4.png"/ alt="navy">
             <img src="http://i.imgur.com/pyj0DNA.jpg" width="100px" height="100px" alt="marine">
             <img src="http://i.imgur.com/s71wcsW.jpg" alt="coast">
-            <img src="http://i.imgur.com/P72pprw.jpg"alt="national">
+            <img src="http://i.imgur.com/Xl9Bipl.png"alt="national">
             <img src="http://i.imgur.com/QXcZP2h.gif" alt="airforce">
             <div id="copy">Copyright ©2016 Fresno Veterans Day Parade </div>
           <img src="http://i.imgur.com/k1mPN5e.gif" width="25px" height="25px" alt="face" id="face">
