--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     </head>
     <body>
         <header>
-           <img src="http://i.imgur.com/eoK3p48.png" alt="logo">
+          <section id="top">
+           <span id=vet_logo><img src="http://i.imgur.com/eoK3p48.png" alt="logo"></span>
             <nav>
                 <ul>
                     <li><a href="#">home</a></li>
@@ -19,7 +20,8 @@
                     <li><a href="index3.html">about us</a></li>
                 </ul>
             </nav>
-            <img src="http://i.imgur.com/gyYmV8d.png" alt="sponsor" id="sponsor">
+            <span id="sponsor"><img src="http://i.imgur.com/gyYmV8d.png" alt="sponsor"></span>
+        </section>
         </header>
        
         <main>
