--- a/index3.html
+++ b/index3.html
@@ -3,16 +3,16 @@
     <head>
        <title> fresnovdp</title>       
         <meta name="viewport"content="width=device-width, inital-scale=1"/>
-        <meta charset="utf-8"/>
-        <link rel="stylesheet" type="text/css" href="css/style3.css."/>
+        <link rel="stylesheet" type="text/css" href="css/style2.css"/>
         
     </head>
     <body>
         <header>
-           <img src="http://i.imgur.com/eoK3p48.png" alt="logo">
+          <section id="top">
+           <span id=vet_logo><img src="http://i.imgur.com/eoK3p48.png" alt="logo"></span>
             <nav>
                 <ul>
-                    <li><a href="index.html">home</a></li>
+                    <li><a href="#">home</a></li>
                     <li><a href="http://fresnovdp.org/grandmarshal.php">grand Marshal</a></li>
                     <li><a href="#">press release</a></li>
                     <li><a href="index2.html">parade route</a></li>
@@ -20,10 +20,11 @@
                     <li><a href="index3.html">about us</a></li>
                 </ul>
             </nav>
-            <img src="http://i.imgur.com/gyYmV8d.png" alt="sponsor" id="sponsor">
+            <span id="sponsor"><img src="http://i.imgur.com/gyYmV8d.png" alt="sponsor"></span>
+        </section>
         </header>
-        <main id="main">
-           <section>
+        <main id="mainabout">
+           <section id="art">
                <article><b>About Us</b>
                     The Fresno Veterans Day Parade honors our veterans from all branches. The parade is held in downtown Fresno. It has grown by leaps and bounds over its nine decades of existence, so much so in fact, that in 2007, the Executive Board of the Parade presented the idea of becoming incorporated and applying for 501(c)3 status. The response was unanimous and the parade became a not-for-profit corporation in California.</article>
                 <article><b>HistoryVeterans Day</b>
