--- a/index3.html
+++ b/index3.html
@@ -3,7 +3,7 @@
     <head>
        <title> fresnovdp</title>       
         <meta name="viewport"content="width=device-width, inital-scale=1"/>
-        <link rel="stylesheet" type="text/css" href="css/style2.css"/>
+        <link rel="stylesheet" type="text/css" href="css/style3.css"/>
         
     </head>
     <body>
@@ -23,7 +23,7 @@
             <span id="sponsor"><img src="http://i.imgur.com/gyYmV8d.png" alt="sponsor"></span>
         </section>
         </header>
-        <main id="mainabout">
+        <main id="about">
            <section id="art">
                <article><b>About Us</b>
                     The Fresno Veterans Day Parade honors our veterans from all branches. The parade is held in downtown Fresno. It has grown by leaps and bounds over its nine decades of existence, so much so in fact, that in 2007, the Executive Board of the Parade presented the idea of becoming incorporated and applying for 501(c)3 status. The response was unanimous and the parade became a not-for-profit corporation in California.</article>
@@ -36,7 +36,7 @@
             <article>U.S. Representative Ed Rees from Emporia,             Kansas, presented a bill establishing the               holiday through Congress. President Dwight             Eisenhower, also from Kansas, signed the bill           into law on May 26, 1954. Congress amended this         act on June 1,1954, replacing "Armistice" with         "Veterans," and it has been known as Veterans            Day since.The National Veterans Award, created         in 1954, also started in Birmingham, Alabama.           Congressman Rees of Kansas was honored in               Alabama as the first recipient of the award for         his support offering legislation to make               Veterans Day a federal holiday, which marked           nine years of effort by Raymond Weeks. Weeks           conceived the idea in 1945, petitioned Gen.             Eisenhower in 1946, led the first Veterans Day         celebration in 1947 (keeping the official name         Armistice Day until Veterans Day was legal in           1954).
             </article>
             <article>
-                     Although originally scheduled for celebration on November 11 of every year, starting in 1971 in accordance with the Uniform Monday Holiday Act, Veterans Day was moved to the fourth Monday of October. In 1978, it was moved back to its original celebration on <u>November 11.</u>Fresno Veterans Day Parade</article>
+                     Although originally scheduled for celebration on November 11 of every year, starting in 1971 in accordance with the Uniform Monday Holiday Act, Veterans Day was moved to the fourth Monday of October. In 1978, it was moved back to its original celebration on <u><b>November 11.</b></u>Fresno Veterans Day Parade</article>
           </section>
                <a href="https://www.paypal.com/us/cgi-bin/webscr?cmd=_flow&SESSION=3O0uQfbRUxHAi_YDlHZKMwYE6KZ-SWaQv9DUPehuqXtt8F_rgV6j3iW1_Ba&dispatch=5885d80a13c0db1f8e263663d3faee8d64ad11bbf4d2a5a1a0d303a50933f9b2"><img src="http://i.imgur.com/p3CpaMM.gif"width="150px" height="50px" alt="donate" id="donate"></a>
 
