--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
        <title> fresnovdp</title>       
         <meta name="viewport"content="width=device-width, inital-scale=1"/>
         <link rel="stylesheet" type="text/css" href="css/style.css"/>
+        <link rel="stylesheet" media="(max-width:800px)" href="css/style.css"/>
         
     </head>
     <body>
@@ -12,12 +13,11 @@
            <span id=vet_logo><img src="http://i.imgur.com/eoK3p48.png" alt="logo"></span>
             <nav>
                 <ul>
-                    <li><a href="#">home</a></li>
-                    <li><a href="http://fresnovdp.org/grandmarshal.php">grand Marshal</a></li>
-                    <li><a href="#">press release</a></li>
-                    <li><a href="index2.html">parade route</a></li>
-                    <li><a href="#">sponsors</a></li>
-                    <li><a href="index3.html">about us</a></li>
+                    <li><a href="home.html">home</a></li>
+                    <li><a href="indexgm.html">grand Marshal</a></li>
+                    <li><a href="media.html">media</a></li>
+                    <li><a href="route.html">parade route</a></li>
+                    <li><a href="about.html">about us</a></li>
                 </ul>
             </nav>
             <span id="sponsor"><img src="http://i.imgur.com/gyYmV8d.png" alt="sponsor"></span>
