fixed index to load onto web

--- a/General.html
+++ b/General.html
@@ -13,7 +13,7 @@
             <nav>
                 <ul>
                     <li><a href="home.html">home</a></li>
-                    <li><a href="indexgm.html">grand Marshal</a></li>
+                    <li><a href="General.html">grand Marshal</a></li>
                     <li><a href="media.html">media</a></li>
                     <li><a href="route.html">parade route</a></li>
                     <li><a href="about.html">about us</a></li>
