--- a/about.html
+++ b/about.html
@@ -12,8 +12,8 @@
            <span id=vet_logo><img src="http://i.imgur.com/eoK3p48.png" alt="logo"></span>
             <nav>
                 <ul>
-                    <li><a href="home.html">home</a></li>
-                    <li><a href="general.html">grand Marshal</a></li>
+                    <li><a href="index.html">home</a></li>
+                    <li><a href="gm.html">grand Marshal</a></li>
                     <li><a href="media.html">media</a></li>
                     <li><a href="route.html">parade route</a></li>
                     <li><a href="about.html">about us</a></li>
@@ -22,6 +22,8 @@
             <span id="sponsor"><img src="http://i.imgur.com/gyYmV8d.png" alt="sponsor"></span>
         </section>
         </header>
+        <span id="flag"><img src="http://i.imgur.com/LXNHMn9.jpg" width="1000px" height="800px"/> </span>
+
         <main id="about">
            <section id="art">
                <article><b>About Us</b>
