--- a/gm.html
+++ b/gm.html
@@ -12,8 +12,8 @@
            <span id=vet_logo><img src="http://i.imgur.com/eoK3p48.png" alt="logo" id="gen"></span>
             <nav>
                 <ul>
-                    <li><a href="home.html">home</a></li>
-                    <li><a href="general.html">grand Marshal</a></li>
+                    <li><a href="index.html">home</a></li>
+                    <li><a href="gm.html">grand Marshal</a></li>
                     <li><a href="media.html">media</a></li>
                     <li><a href="route.html">parade route</a></li>
                     <li><a href="about.html">about us</a></li>
